# log-template-miner

./: CHANGELOG.md  README.md  pyproject.toml
src/logminer/: __init__.py  cli.py  mask.py  miner.py
tests/: test_cli.py  test_mask.py  test_miner.py
