[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "logminer"
version = "0.2.0"
description = "Cluster raw log lines into templates and extract their parameters — a small, dependency-free Drain."
readme = "README.md"
authors = [{ name = "Joshua John", email = "josh202@gmail.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["logs", "drain", "template", "clustering", "observability", "splunk"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
logminer = "logminer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
